# little-lang

./: .clang-format  .clang-tidy  .cmake-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  NOTES.md  README.md  build.sh  conanfile.txt
examples/: args.lil  deref.lil  factorial.lil  factorial.txt  fib.lil  fib.txt  hello_world_named.lil  hello_world_raw.lil  if_expr.lil  import_sink.lil  import_source.lil  mmap.lil  strlen.lil  struct.lil
examples/stdlib/: start.S  syscall_nums.lil
src/: CMakeLists.txt  Makefile  ast_to_cfg.cpp  ast_to_cfg.hpp  cfg_to_llvm.cpp  cfg_to_llvm.hpp  context_module.cpp  context_module.hpp  emit_asm.cpp  emit_asm.hpp  global_map.hpp  global_values.cpp  global_values.hpp  intrinsics.cpp  intrinsics.hpp  jit.cpp  jit.hpp  llvm_type_lowering.cpp  llvm_type_lowering.hpp  location.cpp  location.hpp  main.cpp  new_lexer.cpp  new_lexer.hpp  new_parser.cpp  new_parser.hpp  node.hpp  nodes.cpp  nodes.hpp  parser.y  program.cpp  program.hpp  scoped_map.hpp  settings.cpp  settings.hpp  tokens.l  type_context.cpp  type_context.hpp  version.hpp.in
src/ast/: CMakeLists.txt  base_nodes.hpp  expr_nodes.hpp  lexer.cpp  lexer.hpp  location.cpp  location.hpp  node_utils.hpp  nodes.cpp  nodes.hpp  nodes_forward.hpp  parser.cpp  parser.hpp  serializer.cpp  serializer.hpp  stmt_nodes.hpp  token_to_string.cpp  token_to_string.hpp  top_lvl_nodes.hpp  type.cpp  type.hpp  type_context.cpp  type_context.hpp  visitor_base.hpp
src/common/: CMakeLists.txt  literal_type.hpp  operations.hpp  token_to_string.cpp  token_to_string.hpp
src/control_flow/: graph.cpp  graph.hpp  node.hpp  node_forward.hpp  serializer.cpp  serializer.hpp  type_checker.cpp  type_checker.hpp  visitor.cpp  visitor.hpp
src/utils/: CMakeLists.txt  execute.cpp  execute.hpp  global_map.hpp  move_copy.hpp  scoped_map.hpp  string_utils.cpp  string_utils.hpp  value_getter.hpp
src/visitor/: codegen.cpp  codegen.hpp  printer.cpp  printer.hpp  token_to_string.cpp  token_to_string.hpp  type_checker.cpp  type_checker.hpp  value_getter.hpp  visitor_base.hpp
stdlib/: start.S
test/: CMakeLists.txt  ast_to_cfg_test.cpp  emit_asm_test.cpp  factorial.txt  fib.txt  fuzzer.cpp  global_map_test.cpp  main_tests.cpp  new_lexer_test.cpp  new_parser_test.cpp  parser_test.cpp  scoped_map_test.cpp  serializer_test.cpp  settings_test.cpp  string_utils_test.cpp
tools/: build.sh  build_profile.sh  count_lines.sh  coverage_test.sh  format.sh  fuzz.sh  include_graph.sh  make_graph.sh  parser_graph.sh  run.sh  search_llvm.sh  syscall_gen.sh  test.sh  test_examples.sh  tidy.sh
